Added form to countdown where user can enter seconds

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,8 @@
-//
-   Created by PANCAK3 on 12/7/2016.
 doctype html
 html(lang='en')
     head
         meta(charset='UTF-8')
-        title Simple React App
+        title Timer Application
     body
         #app
         script(src="bundle.js")
