--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -1,4 +1,11 @@
 @import "base/variables"
+
+//Foundation
+@import "base/foundation-settings"
+@import "foundation"
+@include foundation-everything(true)
+
+// Components
 @import "components/navigation"
 @import "components/clock"
 @import "components/controls"
