--- a/app/sass/base/_variables.scss
+++ b/app/sass/base/_variables.scss
@@ -1,11 +1,11 @@
 //Colors
-$grey: #333333;
+$grey: #333;
 
 // Navigation Colors
 $nav-background: $grey;
-$nav-text-color: #FFF;
+$nav-text-color: #fff;
 
 // Clock variables
-$clock-text-color: #FFF;
-$clock-bg-color: #B5D0E2;
-$clock-border-color: #2099E8;
+$clock-text-color: #fff;
+$clock-bg-color: #b5d0e2;
+$clock-border-color: #2099e8;
